package com.yonatankarp.factory

/**
 * Coin interface.
 */
internal interface Coin {
    val description: String
}
