package com.yonatankarp.factory

/**
 * CopperCoin implementation.
 */
internal class CopperCoin : Coin {
    override val description = "This is a copper coin."
}
