package com.yonatankarp.factory

/**
 * GoldCoin implementation.
 */
internal class GoldCoin : Coin {
    override val description = "This is a gold coin."
}
